--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,16 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torch\n"
+    "import torch\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -20,7 +21,7 @@
        "True"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -32,10 +33,10 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "fff9bac851ce070e741ef1d455d1ca7b326273f2606d88735eb64405164a388c"
+   "hash": "a34e404a26cdbce174dac3a88177df2c14da4720cb42d80e60a70575bcfe4910"
   },
   "kernelspec": {
-   "display_name": "Python 3.9.7 ('base')",
+   "display_name": "Python 3.10.4 ('ml-general')",
    "language": "python",
    "name": "python3"
   },
